--- a/package.json
+++ b/package.json
@@ -1,33 +1,25 @@
 {
-  "name": "simpson-cookbook",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "electron .",
-    "rebuild": "electron-rebuild -f -w sqlite3",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "electron-builder install-app-deps"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tdsimpson/Simpson-Cookbook.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/tdsimpson/Simpson-Cookbook/issues"
-  },
-  "homepage": "https://github.com/tdsimpson/Simpson-Cookbook#readme",
+  "name": "electron-react-example",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "electron": "^7.1.3",
-    "electron-watch": "^1.0.9",
-    "knex": "^0.20.4",
-    "sqlite3": "^4.1.1"
+    "axios": "^0.18.0",
+    "concurrently": "^3.6.1",
+    "electron": "^2.0.7",
+    "electron-builder": "^20.27.1",
+    "electron-is-dev": "^0.3.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4",
+    "wait-on": "^2.1.0"
   },
-  "devDependencies": {
-    "electron-builder": "^21.2.0",
-    "electron-rebuild": "^1.8.8"
-  }
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "electron-dev": "concurrently \"BROWSER=none npm run start\" \"wait-on http://localhost:3000 && electron .\""
+  },
+  "main": "public/main.js"
 }
