--- a/package.json
+++ b/package.json
@@ -1,74 +1,33 @@
 {
-<<<<<<< HEAD
-<<<<<<< HEAD
-  "name": "Simpson Cookbook",
+  "name": "simpson-cookbook",
   "version": "1.0.0",
-  "description": "A cookbook of Simpson family recipes",
+  "description": "",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
+    "postinstall": "electron-builder install-app-deps",
     "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
-    "package-win": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Shopping List\"",
-    "package-linux": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/icon.png --prune=true --out=release-builds"
+    "package-win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Simpson Cookbook\"",
+    "package-linux": "electron-packager . --overwrite --platform=linux --arch=x64 --icon=assets/icons/png/icon.png --prune=true --out=release-builds"
+  },
+  "dependencies": {
+    "electron": "^1.8.8",
+    "knex": "^0.20.4",
+    "sqlite3": "^4.1.1"
+  },
+  "devDependencies": {
+    "electron-packager": "^9.0.1",
+    "electron-builder": "^21.2.0",
+    "electron-rebuild": "^1.8.8"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tdsimpson/Simpson-Cookbook.git"
   },
   "author": "Taylor Simpson",
   "license": "MIT",
-  "dependencies": {
-    "electron": "^7.1.5"
+  "bugs": {
+    "url": "https://github.com/tdsimpson/Simpson-Cookbook/issues"
   },
-  "devDependencies": {
-    "electron-packager": "^14.1.1"
-  }
+  "homepage": "https://github.com/tdsimpson/Simpson-Cookbook#readme"
 }
-=======
-  "name": "electron-react-example",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "axios": "^0.18.0",
-    "concurrently": "^3.6.1",
-    "electron": "^2.0.7",
-    "electron-builder": "^20.27.1",
-    "electron-is-dev": "^0.3.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "wait-on": "^2.1.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "electron-dev": "concurrently \"BROWSER=none npm run start\" \"wait-on http://localhost:3000 && electron .\""
-  },
-  "main": "public/main.js"
-}
->>>>>>> 998674d25d5b6ab842ad791fd2078af1ef2d81d5
-=======
-  "name": "electron-react-example",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "axios": "^0.18.0",
-    "concurrently": "^3.6.1",
-    "electron": "^2.0.7",
-    "electron-builder": "^20.27.1",
-    "electron-is-dev": "^0.3.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "wait-on": "^2.1.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "electron-dev": "concurrently \"BROWSER=none npm run start\" \"wait-on http://localhost:3000 && electron .\""
-  },
-  "main": "public/main.js"
-}
->>>>>>> 998674d25d5b6ab842ad791fd2078af1ef2d81d5
