--- a/package.json
+++ b/package.json
@@ -1,33 +1,48 @@
 {
-  "name": "simpson-cookbook",
-  "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron .",
-    "postinstall": "electron-builder install-app-deps",
-    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
-    "package-win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Simpson Cookbook\"",
-    "package-linux": "electron-packager . --overwrite --platform=linux --arch=x64 --icon=assets/icons/png/icon.png --prune=true --out=release-builds"
-  },
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "electron": "^1.8.8",
-    "knex": "^0.20.4",
-    "sqlite3": "^4.1.1"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.0",
+    "electron-is-dev": "^1.1.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\"",
+    "preelectron-pack": "yarn build",
+    "electron-pack": "build --em.main=build/main.js",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "electron-packager": "^9.0.1",
+    "concurrently": "^5.0.1",
+    "electron": "^7.1.5",
     "electron-builder": "^21.2.0",
-    "electron-rebuild": "^1.8.8"
+    "wait-on": "^3.3.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tdsimpson/Simpson-Cookbook.git"
-  },
-  "author": "Taylor Simpson",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/tdsimpson/Simpson-Cookbook/issues"
-  },
-  "homepage": "https://github.com/tdsimpson/Simpson-Cookbook#readme"
+  "main": "public/main.js",
+  "homepage": "./"
 }
